app/assets/stylesheets/test.css.scss
// Place all the styles related to the Test controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.tests {
	margin: 0 auto;
  padding: 0 10px;
	width: 100%;
}

#app-show-header {
  margin-top: 0;
  margin-bottom: 5px;
  background-color: #ffffff;
  border: 1px solid #ddd;
  position: relative;
  height: 105px;
}

.edit-test-name {
  float: left;
  width: 65%;
}

.app-progress-header {
  width: 100%;
  padding: 0;
  height: 46px;
  position: absolute;
  bottom: 0;
  font-size: 0;
}

#test-summary-col {
  padding: 5px;
  min-width: 308px;
}

.test-container {
  width: 100%;
  background-color: #fff;
  border: 1px solid #ddd;
  height: 15vh;
}

.test-body {
  width: 100%;
  height: 34%;
  vertical-align: top;
  display: inline-block;
}

.test-header {
  width: 100%;
  height: 66%;
  border-bottom: 1px solid #ddd;
  position: relative;
}

.test-header > div {
  position: absolute;
  bottom: 0;
  vertical-align: bottom;
  display: inline-block;
  width: 100%;
}

.test-status {
  height: 100%;
  width: 100%;
  position: relative;
}

.test-status-passing {
  background-color: #8DC63F;
}

.test-status-failing {
  background-color: #F15C22;
}

.test-status-other {
  background-color: rgba(168, 168, 168, 0.78);
}

.last-build > a > p {
  padding-left: 7px;
  padding-right: 7px;
  padding-top: 7px;
  margin-bottom: 0;
}

.last-successful {
  color: #fff;
  display: inline-block;
  padding-right: 5px;
  position: absolute;
  margin-bottom: 3px;
  bottom: 0;
  right: 0;
}

.test-type-title {
  color: #a8a8a8;
  display: inline-block;
  width: 79%;
  margin-bottom: 0;
  padding-left: 5px;
	vertical-align: bottom;
}

.test-status-title {
  color: #fff;
  padding-left: 5px;
  margin-bottom: 3px;
  position: absolute;
  bottom: 0;
  font-size: 1.5vh;
}

.test-last-build {
  color: #fff;
  margin-bottom: 3px;
  padding-right: 5px;
  position: absolute;
  bottom: 0;
  right: 0;
  font-size: 1.5vh;
}

.test-link-title {
  display: inline-block;
  padding-right: 5px;
  margin-bottom: 5px;;
  width: 19%;
	vertical-align: bottom;
}

.test-link {
  color: #a8a8a8;
}

.test-link:hover {
	text-decoration: none;
}

.settings-test-link {
  color: #333;
}

.settings-test-link:hover {
	text-decoration: none;
}

.last-build-link {
  color: #fff;
}

.last-build-link:hover {
  text-decoration: none;
  color: #a8a8a8;
}

.test-type-tag {
	background: #eee;
  border-radius: 5px;
  color: #333;
  display: inline-block;
  height: 100%;
  line-height: 3vh;
  padding: 0 5px 0 5px;
  position: relative;
  margin: 0 0 5px 0;
  text-decoration: none;
  -webkit-transition: color 0.2s;
  cursor: pointer;
  font-size: 1.5vh;
}

.test-header > a > h4 {
  margin: 0;
  padding: 5px;
  font-size: 2vh;
}

.edit-test-link {
  color: #a8a8a8;
  display: none;
}

.edit-test-toggle {
  float: right;
  text-align: right;
  width: 35%;
}

.edit-test-update {
	margin-right: 8px;
}

.edit-test-table {
	background-color: #ffffff;
}

.parameterized-env-label {
  color: #a8a8a8;
  text-decoration: none;
}

.parameterized-env-label:hover {
  color: #a8a8a8;
  text-decoration: none
}

.ui-autocomplete {
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1000;
  float: left;
  display: none;
  min-width: 160px;
  _width: 160px;
  padding: 4px 0;
  margin: 2px 0 0 0;
  list-style: none;
  background-color: #ffffff;
  border-color: #ccc;
  border-color: rgba(0, 0, 0, 0.2);
  border-style: solid;
  border-width: 1px;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
  -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
  -webkit-background-clip: padding-box;
  -moz-background-clip: padding;
  background-clip: padding-box;
  *border-right-width: 2px;
  *border-bottom-width: 2px;

  .ui-menu-item > a.ui-corner-all {
    display: block;
    padding: 3px 15px;
    clear: both;
    font-weight: normal;
    line-height: 18px;
    color: #555555;
    white-space: nowrap;

    &.ui-state-hover, &.ui-state-active {
      color: #ffffff;
      text-decoration: none;
      background-color: #0088cc;
      border-radius: 0px;
      -webkit-border-radius: 0px;
      -moz-border-radius: 0px;
      background-image: none;
    }
  }
}

a.test-type-tag:hover {
	text-decoration: none;
  color: #333;
}

.test-modal-body {
  padding: 15px 30px 30px 30px;
}

.test-modal-header {
  padding: 30px 30px 8px 30px;
}

.test-modal-header > h4 {
  margin-top: 0;
  margin-bottom: 0;
}

#test-modal-label {
  text-align: right;
}

#test-modal-row {
  padding: 5px;
}

.test-modal {
  border: 1px solid #ddd;
  background-color: #fff;
  max-width: 500px;
  min-height: 300px;
  margin: 150px auto;
	position: relative;
}

.test-modal-buttons {
  width: 100%;
  margin-top: 15px;
  text-align: right;
}

.test-modal-button {
  margin-left: 8px;
}

.search-label {
  display: inline-block;
  font-weight: bold;
}

.search-form {
  width: 50%;
  margin: 0 auto;
}

#search-input {
  display: inline-block;
}

.test-search {
  padding: 15px;
}

.search-icon {
  height: 20px;
  display: inline-block;
  margin-left: -30px;
}

